# IFT-3101_labos

./: .gitignore
LAB01/: message.txt
LAB02/: image_viewer  main.cpp
LAB03/opengl-circle-app/: CMakeLists.txt  Makefile  README.md  main
LAB03/opengl-circle-app/shaders/: text.fs
LAB03/opengl-circle-app/src/: ellipse.cpp  ellipse.h  main.cpp  polygon.cpp  polygon.h  shader_utils.cpp  shader_utils.h  text.cpp  text.h  triangle.cpp  triangle.h  window.h
LAB04/Lab04/: Makefile  config.make
LAB04/Lab04/src/: ofApp.cpp  ofApp.h
LAB05/: Makefile  config.make
LAB05/src/: ofApp.cpp  ofApp.h
LAB06/lab06/src/: ofApp.cpp  ofApp.h
LAB07/Lab7/src/: ofApp.cpp
LAB08/Lab8/: config.make
LAB08/Lab8/src/: ofApp.cpp  ofApp.h
LAB10/Lab10/src/: ofApp.cpp  ofApp.h
LAB11/Lab11/src/: ofApp.cpp  ofApp.h
LAB12/Lab12/src/: ofApp.cpp  ofApp.h
LAB13/Lab13/: AMELIORATIONS.md  CEL_SHADING_README.md  CHECKLIST_FINALE.md  DEMARRAGE_RAPIDE.md  EXPLICATION_TECHNIQUE.md  INDEX.md  INSTRUCTIONS.md  LIVRAISON_FINALE.md  README.md  RESUME_PROJET.md  TESTS_VALIDATION.md  UNE_PAGE_RESUMEE.md
LAB13/Lab13/src/: ofApp.cpp  ofApp.h
LAB14/Lab14/src/: ofApp.cpp  ofApp.h
